# liberopy

./: .gitignore  CHANGELOG  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: devel.yml
liberopy/: __init__.py  htmlparser.py  log.py  mabparser.py  marcparser.py  webopac.py  webservices.py  xmlparser.py
tests/: test_webservices.py
utils/: build  linter  setup  tests
